# benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ackermann.ark  insert_data.py  run.ps1  run.sh  vm.cpp
Ackermann/: Ackermann.java  Ackermann.rb  ackermann.ark  ackermann.cpp  ackermann.js  ackermann.lua  ackermann.py
Fibonacci/: Fibonacci.java  fibonacci.ark  fibonacci.cpp  fibonacci.js  fibonacci.lua  fibonacci.py  fibonacci.rb
ListAlloc/: list_alloc.js  list_alloc.rb
benchmarks/ackermann/: arkscript.ark  lua.lua  node.js  python.py  ruby.rb  wren.wren
benchmarks/binary_tree/: arkscript.ark  lua.lua  node.js  python.py  ruby.rb  wren.wren
benchmarks/fibonacci/: arkscript.ark  lua.lua  node.js  python.py  ruby.rb  wren.wren
benchmarks/for/: arkscript.ark  lua.lua  node.js  python.py  ruby.rb  wren.wren
benchmarks/leibniz/: arkscript.ark  lua.lua  node.js  python.py  ruby.rb  wren.wren
data/: arkscript.json  lua.json  node.json  python.json  ruby.json  wren.json
